--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "My Electron application description",
   "main": "./src/Init/ElectronMain.js",
   "scripts": {
+    "rebuild": "electron-rebuild -f -w sqlite3",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -18,7 +19,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-rebuild": "^3.2.9",
+    "electron-squirrel-startup": "^1.0.0",
+    "knex": "^2.4.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.5",
